human-intervention-logs/org.jline:jline-reader:4.0.0/gradle-test/gradle-test-2026-05-04T03-01-22-023821Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.jline:jline-reader:4.0.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 13 busy and 6 incompatible and 176 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:26: error: cannot find symbol
import org.jline.reader.impl.completer.FileNameCompleter;
                                      ^
  symbol:   class FileNameCompleter
  location: package org.jline.reader.impl.completer
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:283: error: cannot find symbol
        FileNameCompleter completer = new FileNameCompleter();
        ^
  symbol:   class FileNameCompleter
  location: class Jline_readerTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:283: error: cannot find symbol
        FileNameCompleter completer = new FileNameCompleter();
                                          ^
  symbol:   class FileNameCompleter
  location: class Jline_readerTest

> Task :compileTestJava

3 errors
> Task :compileTestJava FAILED


FAILURE: Build failed with an exception.
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/build/reports/problems/problems-report.html

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:26: error: cannot find symbol
  import org.jline.reader.impl.completer.FileNameCompleter;
                                        ^
    symbol:   class FileNameCompleter
    location: package org.jline.reader.impl.completer
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:283: error: cannot find symbol
          FileNameCompleter completer = new FileNameCompleter();
          ^

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date
    symbol:   class FileNameCompleter
    location: class Jline_readerTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/tests/src/org.jline/jline-reader/4.0.0/src/test/java/org_jline/jline_reader/Jline_readerTest.java:283: error: cannot find symbol
          FileNameCompleter completer = new FileNameCompleter();
                                            ^
    symbol:   class FileNameCompleter
    location: class Jline_readerTest
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 23s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5601-a9ce3250/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.jline:jline-reader:4.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 26s
9 actionable tasks: 1 executed, 8 up-to-date
